# ESP32S3-Wearable-Core

./: .clangd  README.md
ESP32-ADC/components/Middlewares/: CMakeLists.txt
ESP32-ADC/components/Middlewares/GetBatteryLevel/: GetBatteryLevel.c  GetBatteryLevel.h
ESP32-ADC/main/: CMakeLists.txt  main.c
components/BSP/: CMakeLists.txt
components/BSP/MYIIC/: myiic.c  myiic.h
components/BSP/i2c_driver/: i2c_driver.c  i2c_driver.h
components/GetBatteryLevel/: CMakeLists.txt  GetBatteryLevel.c  GetBatteryLevel.h
components/MAX30102/: CMakeLists.txt  max30102.c  max30102.h
components/MPU6050/: CMakeLists.txt  MPU6050.c  MPU6050.h
components/MessageQueue/: CMakeLists.txt  MessageQueue.c  MessageQueue.h
components/Middlewares/: CMakeLists.txt
components/Middlewares/GetBatteryLevel/: GetBatteryLevel.c  GetBatteryLevel.h
components/OLED_Data/: CMakeLists.txt  OLED_Data.c  OLED_Data.h
components/OLED_driver/: CMakeLists.txt  OLED_driver.c  OLED_driver.h
components/system_oled_show/: CMakeLists.txt  system_oled_show.c  system_oled_show.h
main/: CMakeLists.txt  main.c
